--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.81"
+log = "0.4.21"
 pico-args = "0.5.0"
 winsafe = { version = "0.0.20", features = ["gui"] }
