--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,10 @@ jobs:
           unzip ninja-linux.zip -d bin
           echo "$GITHUB_WORKSPACE/bin" >> $GITHUB_PATH
 
+      - name: Install FLTK dependencies
+        if: ${{ matrix.os == 'ubuntu-24.04' }}
+        run: sudo apt-get update -y && sudo apt-get install -y libx11-dev libglu1-mesa-dev libxft-dev libxcursor-dev
+
       - name: Configure
         run: cmake --preset ${{ matrix.cmake_preset }}
 
