--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Install FLTK dependencies
         if: ${{ matrix.os == 'ubuntu-24.04' }}
-        run: sudo apt-get update -y && sudo apt-get install -y libx11-dev libglu1-mesa-dev libxft-dev libxcursor-dev
+        run: sudo apt-get update -y && sudo apt-get install -y libglu1-mesa-dev libwayland-dev wayland-protocols libdbus-1-dev libxkbcommon-dev libegl-dev libopengl-dev libpango1.0-dev libgtk-3-dev
 
       - name: Configure
         run: cmake --preset ${{ matrix.cmake_preset }}
