Add compiler flags to CMakePresets.json

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
 
           - name: Windows
             os: windows-latest
-            cmake_preset: windows-release
+            cmake_preset: msvc-release
 
     name: ${{ matrix.name }}
 
